--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -12,7 +12,7 @@ body {
   background-image: url("./images/bg-2.jpg") !important;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center ;
+  background-position: top ;
   background-color: #000000;
 }
 
